fixed login ui page from overflowing on mobile/smaller screens

--- a/customization/loginui.css
+++ b/customization/loginui.css
@@ -10,7 +10,7 @@
 
 
 .wrap {
-    width: 420px;
+    width: 350px;
     background: transparent;
     border: 2px solid rgba(255,255,255,.2);
     backdrop-filter: blur(20px);
@@ -62,7 +62,7 @@
 .wrap .remember-forgot {
     display: flex;
     justify-content: space-between;
-    font-size: 15px;
+    font-size: 12px;
     margin: 15px 0 15px;
 }
 
